- gitignore in pages dir - correct path to Ketcher - use let instead of const

--- a/pages/index.html
+++ b/pages/index.html
@@ -31,7 +31,7 @@
           <div class="row mt-1">
             <div class="col-lg-8">
               <div class="ratio" style="--bs-aspect-ratio:62%;min-height:450px;">
-                <iframe id="ketcher" class="w-100" src="ketcher/react-app/build/index.html" onload="onKetcherLoaded()"></iframe>
+                <iframe id="ketcher" class="w-100" src="ketcher/index.html" onload="onKetcherLoaded()"></iframe>
               </div>
             </div>
             <div class="col-lg-4 mt-auto">
