- complain when InChI string doesn't start with "InChI=" - trim InChI input - correct checks for empty strings

--- a/pages/index.html
+++ b/pages/index.html
@@ -120,7 +120,7 @@
             <div class="col-lg-8">
               <div class="ratio" style="height:100px;">
                 <div class="w-100">
-                  <textarea id="tab3-inchiTextarea" class="form-control pe-5 h-100" style="resize:none;" placeholder="Paste an InChI here" oninput="updateTab3()"></textarea>
+                  <textarea id="tab3-inchiTextarea" class="form-control pe-5 h-100" style="resize:none;" placeholder="Paste an InChI string here" oninput="updateTab3()"></textarea>
                 </div>
               </div>
             </div>
