fix id of Molfile textarea

--- a/pages/index.html
+++ b/pages/index.html
@@ -77,7 +77,7 @@
               <div class="ratio" style="--bs-aspect-ratio:62%;min-height:450px;">
                 <div class="w-100">
                   <textarea id="tab2-molfileTextarea" class="form-control pe-5 h-100" style="resize:none;" placeholder="Paste or drag-and-drop a Molfile here" ondragover="onTextareaDragover(event)" ondrop="onMolfileTextareaDrop(event)" oninput="updateTab2()"></textarea>
-                  <button class="btn btn-outline-secondary border-0" style="position:absolute;top:10px;right:10px;" onclick="document.getElementById('molfileTextarea').value = '';updateTab2()"><i class="bi bi-trash"></i></button>
+                  <button class="btn btn-outline-secondary border-0" style="position:absolute;top:10px;right:10px;" onclick="document.getElementById('tab2-molfileTextarea').value = '';updateTab2()"><i class="bi bi-trash"></i></button>
                 </div>
               </div>
             </div>
