- add example InChI string to textarea placeholder - correct label target

--- a/pages/index.html
+++ b/pages/index.html
@@ -120,13 +120,13 @@
             <div class="col-lg-8">
               <div class="ratio" style="height:100px;">
                 <div class="w-100">
-                  <textarea id="tab3-inchiTextarea" class="form-control pe-5 h-100" style="resize:none;" placeholder="Paste an InChI string here" oninput="updateTab3()"></textarea>
+                  <textarea id="tab3-inchiTextarea" class="form-control pe-5 h-100" style="resize:none;" placeholder="Paste an InChI string here&#10;e.g. InChI=1S/C6H6/c1-2-4-6-5-3-1/h1-6H" oninput="updateTab3()"></textarea>
                 </div>
               </div>
             </div>
             <div class="col-lg-4 mt-auto">
               <div class="mt-2">
-                <label class="form-check-label mb-2" for="tab2-inchiversion">Select InChI version</label>
+                <label class="form-check-label mb-2" for="tab3-inchiversion">Select InChI version</label>
                 <select id="tab3-inchiversion" class="form-select" onchange="updateTab3()"></select>
               </div>
             </div>
