--- a/pages/index.html
+++ b/pages/index.html
@@ -8,15 +8,24 @@
     <!-- InChI modules -->
     <script type="text/javascript" src="inchi/inchi-web106.js"></script>
 
+    <link href="css/index.css" rel="stylesheet">
     <link href="bootstrap/bootstrap-5.2.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="bootstrap/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link href="bootstrap-icons/bootstrap-icons-1.10.3/bootstrap-icons.css" rel="stylesheet" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
   </head>
   <body onload="onBodyLoad()">
     <div class="container" style="margin-bottom: 2rem;">
+      <div class="row mt-1">
+        <div class="col-lg-3">
+          <a href="https://www.inchi-trust.org/">
+            <img style="height:80px;width:auto;" src="img/InChI-logo2.png">
+          </a>
+        </div>
+        <h1 class="col-lg-9 mt-auto">InChI Web Demo</h1>
+      </div>
       <noscript>You need to enable JavaScript!</noscript>
 
-      <ul class="nav nav-tabs mt-3" role="tablist">
+      <ul class="nav nav-tabs mt-1" role="tablist">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="tab1" data-bs-toggle="tab" data-bs-target="#tab1-pane" type="button" role="tab" aria-controls="tab1-pane" aria-selected="true">Draw structure and convert to InChI</button>
         </li>
